--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dev Diary</title>
+  <title>Craft Log</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📓 Dev Diary</h1>
+  <h1>📓 Welcome to Craft Log</h1>
   <form id="entry-form">
     <input type="text" id="project" placeholder="Project name" required />
     <textarea id="what-i-did" placeholder="What I did today" required></textarea>
@@ -21,8 +21,6 @@
   <div id="entries"></div>
 
   <script src="script.js"></script>
-  <?php
-  ?>
 </body>
 </html>
 
